# spherical-tools

./: .gitignore  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
SphericalQt/: CMakeLists.txt
SphericalQt/QRC/: spherical.qrc
SphericalQt/UI/: LPMainWindow.ui  LPSettingsDialog.ui
SphericalQt/include/: LPMainWindow.h  LPOpenGLWidget.h  LPRecordAnimation.h  LPRecorder.h  LPSettingsDialog.h  LPVideoInput.h  LPVideoOutput.h
SphericalQt/source/: LPMainWindow.cpp  LPOpenGLWidget.cpp  LPRecorder.cpp  LPSettingsDialog.cpp  LPVideoInput.cpp  LPVideoOutput.cpp  main.cpp
utility/: CMakeLists.txt  image_to_cubemap.cpp  image_to_cubemap.h
www/: cubemaps.txt  index.html  settings.txt  start_http_server
